[EDP-DDM-15718] Updated Context approach Change-Id: I837bfedf50efb88c88af5ef4b33fc0dbff73a59d
Change-Id: I67963c6b325ae6f6ec690d6b964043ff4f25adb3